# simba-intelligence-mcp

./: .env.example  .gitignore  CLAUDE.md  PUSH_INSTRUCTIONS.md  README.md  pyproject.toml
docs/: nlq-accuracy-field-notes.md
docs/composer/: README.md  api-reference.md
docs/skill/: .gitkeep
scripts/: refresh-docs.sh
si-demo-env/: README.md
src/simba_intelligence_mcp/: __init__.py  client.py  docs.py  server.py
src/simba_intelligence_mcp/tools/: __init__.py  composer_admin.py  si_admin.py  si_chat.py  si_connections.py  si_query.py  si_sources.py  si_users.py
tests/: README.md  test_smoke.py
