[project]
name = "simba-intelligence-mcp"
version = "0.1.0"
description = "MCP server exposing the Simba Intelligence surface (REST API and reference docs) as tools for Claude Desktop and other MCP clients."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.0",
    "httpx>=0.27.0",
]

[project.scripts]
simba-intelligence-mcp = "simba_intelligence_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simba_intelligence_mcp"]
